# Snake2

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
include/Snake2/: Game.hpp
include/Snake2/Core/: EventBus.hpp  Events.hpp  SDLWrappers.hpp
include/Snake2/ECS/: Components.hpp  Entity.hpp  EntityManager.hpp  System.hpp  SystemManager.hpp  Systems.hpp
include/Snake2/Plugins/: Plugin.hpp  SaveLoadPlugin.hpp  ScorePlugin.hpp
include/Snake2/Resources/: ResourceManager.hpp
src/: Game.cpp  main.cpp
src/Core/: SDLWrappers.cpp
src/ECS/: EntityManager.cpp  SystemManager.cpp  Systems.cpp
src/Plugins/: SaveLoadPlugin.cpp  ScorePlugin.cpp
src/Resources/: ResourceManager.cpp
tests/: Snake2LearningTests.cpp
